--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.flexusma</groupId>
     <artifactId>JDA-CMDH</artifactId>
-    <version>1.1.13</version>
+    <version>1.1.14+b1</version>
 
     <build>
         <plugins>
